remove recent posts

--- a/themes/ananke/layouts/index.html
+++ b/themes/ananke/layouts/index.html
@@ -13,7 +13,9 @@
     {{ $section := where $.Site.RegularPages "Section" "in" $section_name }}
     {{ $section_count := len $section }}
     {{ if ge $section_count 1 }}
-      <div class="pa3 pa4-ns w-100 w-70-ns center">
+      <!-- 
+        DataDancers Removing for now because this doesn't look good on the homepage
+        <div class="pa3 pa4-ns w-100 w-70-ns center">
         {{/* Use $section_name to get the section title. Use "with" to only show it if it exists */}}
         {{ with $.Site.GetPage "section" $section_name }}
             <h1 class="flex-none">
@@ -51,7 +53,9 @@
           </section>
         {{ end }}
 
-        </div>
+        </div> 
+      
+      -->
     {{ end }}
   {{ end }}
 {{end}}
