--- a/themes/ananke/layouts/_default/list.html
+++ b/themes/ananke/layouts/_default/list.html
@@ -5,9 +5,7 @@
     </section>
     <section class="flex-ns flex-wrap justify-around mt5">
       {{ range .Paginator.Pages }}
-        <div class="relative w-100 w-30-l mb4 bg-white">
-          {{ .Render "summary" }}
-        </div>
+          {{ .Render "zummary" }}
       {{ end }}
     </section>
     {{- template "_internal/pagination.html" . -}}
