Create inline image component

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -20,3 +20,13 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 10px 0;
 }
+
+.inline-image {
+    display: inline-flex;
+    flex-direction: column;;
+    align-items: center;
+}
+
+.inline-image small {
+    text-align: center;;
+}
