Add cool buttons

--- a/layouts/shortcodes/hydra_strudel.html
+++ b/layouts/shortcodes/hydra_strudel.html
@@ -6,7 +6,7 @@
             <p><strong>language</strong>: Javascript</p>
             
             <a href="https://strudel.cc/" target="_blank">
-                <button class="styled-button">
+                <button class="button button-left">
                     Go To Strudel
                 </button>
             </a>
@@ -25,7 +25,7 @@
             <p><strong>language</strong>: Javascript</p>
 
             <a href="https://hydra.ojack.xyz" target="_blank">
-                <button class="styled-button">
+                <button class="button button-right">
                     Go To Hydra
                 </button>
             </a>
