--- a/themes/da-da/layouts/_default/baseof.html
+++ b/themes/da-da/layouts/_default/baseof.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     {{/* NOTE: the Site's title, and if there is a page title, that is set too */}}
     <title>{{ block "title" . }}{{ with .Params.Title }}{{ . }} | {{ end }}{{ .Site.Title }}{{ end }}</title>
+    <link rel="stylesheet" href="/css/da-da.css"> 
     <link rel="stylesheet" href="/css/layout.css"> 
     <link rel="stylesheet" href="/css/video-embed.css"> 
     <meta name="viewport" content="width=device-width,minimum-scale=1">
