--- a/themes/da-da/layouts/partials/site-navigation.html
+++ b/themes/da-da/layouts/partials/site-navigation.html
@@ -11,9 +11,9 @@
     <div class="flex-l items-center">
       {{ partial "i18nlist.html" . }}
       {{ if .Site.Menus.main }}
-        <ul class="{{ cond (eq $.Site.Language.LanguageDirection "rtl") "pr0 ml3" "pl0 mr3" }}">
+        <ul class="{{ cond (eq $.Site.Language.LanguageDirection "rtl") "pr0" "pl0" }}">
           {{ range .Site.Menus.main }}
-          <li class="list f5 f4-ns fw4 dib {{ cond (eq $.Site.Language.LanguageDirection "rtl") "pl3" "pr3" }}">
+          <li class="list f5 f3-ns fw4 dib {{ cond (eq $.Site.Language.LanguageDirection "rtl") "pl3" "pr3" }}">
             <a href="{{.URL}}"{{if eq .Page nil }} target="_blank" rel="noopener noreferrer"{{ end }} class="nav-link"></a>
             <a class="hover-white no-underline white-90" href="{{ .URL }}"{{if eq .Page nil}} target="_blank" rel="noopener noreferrer" {{ end }} title="{{ i18n "pageTitle" . }}">
               {{ .Name }}
