--- a/themes/da-da/layouts/_default/zummary.html
+++ b/themes/da-da/layouts/_default/zummary.html
@@ -1,7 +1,7 @@
 <div class="relative w-100" style="background-color: transparent !important; border: 2px solid rgba(141, 141, 141, 0.2); padding: 10px;">
   <div class="pa1 gray overflow-hidden">
-    <h1 class="f3">
-      <a href="{{ .RelPermalink }}" class="dim" style="color: rgb(233, 27, 233)">
+    <h1 class="f3" style="text-decoration: none;">
+      <a href="{{ .RelPermalink }}" class="dim" style="text-decoration: none !important; color: rgb(233, 27, 233);">
         {{ .Title }}
       </a>
     </h1>
