override stinky css

--- a/layouts/shortcodes/strudel_in_dd.html
+++ b/layouts/shortcodes/strudel_in_dd.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <h2>Strudel</h2>
-    <div id="strudel"></div>
+    <div id="strudel" style="text-align: left !important;"></div>
     <button id="play">play</button>
     <button id="stop">stop</button>
     <p>This code example is only a fraction of the things strudel can do, check out the documentation to find out more cool ways to produce some noise! <a href="https://strudel.cc/workshop/getting-started/" target="_blank">Strudel Docs</a></p>
