--- a/layouts/shortcodes/strudel_in_dd.html
+++ b/layouts/shortcodes/strudel_in_dd.html
@@ -18,11 +18,11 @@
     </style>
 </head>
 <body>
-    <h2>Strudel</h2>
+    <h2 style="text-align: left !important;">Strudel</h2>
     <div id="strudel" style="text-align: left !important;"></div>
-    <button id="play">play</button>
-    <button id="stop">stop</button>
-    <p>This code example is only a fraction of the things strudel can do, check out the documentation to find out more cool ways to produce some noise! <a href="https://strudel.cc/workshop/getting-started/" target="_blank">Strudel Docs</a></p>
+    <button style="text-align: left !important;" id="play">play</button>
+    <button style="text-align: left !important; "id="stop">stop</button>
+    <p style="text-align: left !important;">This code example is only a fraction of the things strudel can do, check out the documentation to find out more cool ways to produce some noise! <a href="https://strudel.cc/workshop/getting-started/" target="_blank">Strudel Docs</a></p>
     <script>
         const repl = document.createElement('strudel-editor');
         repl.setAttribute('code', `setcps(1)
