--- a/layouts/shortcodes/inline-image.html
+++ b/layouts/shortcodes/inline-image.html
@@ -5,8 +5,8 @@
 {{ $caption := .Get "caption" }}
 
 <div class="inline-image">
-  <img src="{{ $src }}" alt="{{ $alt }}" width="{{ $width }}" height="{{ $height }}" class="custom-image"/>
+  <a href="{{ $src }}" target="_blank"><img src="{{ $src }}" alt="{{ $alt }}" width="{{ $width }}" height="{{ $height }}" class="custom-image"/></a>
   {{ if $caption }}
-    <small>{{ $caption }}</small>
+  <a href="{{ $src }}" target="_blank"><small>{{ $caption }}</small></a>
   {{ end }}
 </div>
