--- a/layouts/shortcodes/home_cta.html
+++ b/layouts/shortcodes/home_cta.html
@@ -1,9 +1,8 @@
 <div class="button-container">
     <button class="button button-left">
-      <a href="/livecode-now" target="_blank">LIVECODE NOW!</a>
+      <a href="https://blog.toplap.org/nodes/" target="_blank">TOPLAP NODES</a>
     </button>
     <button class="button button-right">
       <a href="https://algorave.com/about/" target="_blank">ALGORAVING</a>
     </button>
   </div>
-  
