Add lineup and flyer to algorave post

--- a/layouts/shortcodes/pafl.html
+++ b/layouts/shortcodes/pafl.html
@@ -1,1 +1,1 @@
-<a href="https://bit.ly/pafl-findme" target="_blank">Public Art Futures Lab</a>
+<a href="https://bit.ly/pafl-findme" target="_blank">Public Art Futures Lab</a>, 88 Lower Alabama St, Underground Atlanta
